2010-06-03 Riccardo Mottola <rmottola@users.sf.net>

	* Headers/Protocols/CodeEditorView.h:
	Declare new view protocol

	* Modules/Editors/ProjectCenter/PCEditorView.h
	* Modules/Editors/ProjectCenter/PCEditorView.m:
	Conform to CodeEditorView protocol and add accessor to the editor.

	* Framework/PCProjectWindow.m:
	Return the view's editor undo manager.

2010-06-01 Riccardo Mottola <rmottola@users.sf.net>

	* Modules\Editors\ProjectCenter\PCEditor.m,
	* Modules\Editors\ProjectCenter\PCEditor.m:
	keep an undoManager for the Editor and return that to the window

2010-05-30 03:42-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Projects/Application/Resources/main.m: Same as below.

2010-05-30 03:17-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Projects/Application/Resources/AppController.h
	* Modules/Projects/Application/Resources/AppController.m
	* Modules/Projects/Tool/Resources/main.m: Remove licensing
	and copyright information from these since we don't want to 
	assume that the user will be writing a GPLv3 program owned by the
	FSF (while that would be nice) it's not correct to assume it.

2010-05-30 01:54-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/English.lproj/SaveModified.gorm: Correct issues with 
	Gorm file.
	* Framework/PCSaveModified.m: Use setTitle: instead of setStringValue:
	to set the titles of the buttons.
	
2010-05-30 01:44-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Editors/ProjectCenter/PCEditor.m: Temporarily comment out
	previous change util we find the proper fix as it was preventing 
	files from being saved.

2010-03-06 Riccardo Mottola <rmottola@users.sf.net>

	* Modules\Editors\ProjectCenter\PCEditor.m: setup undo on the editor
	view

2009-11-26 Richard frith-Macdonald <rfm@gnu.org>

	* Modules/Projects/Application/Resources/AppController.m:
	* Modules/Projects/Application/Resources/main.m:
	* Modules/Projects/Application/Resources/AppController.h: